<resources>
    <string name="app_name">LinkAjar</string>
    <string name="top_icon">TOP ICON</string>
    <string name="nama">Nama</string>
    <string name="umur">Umur</string>
    <string name="asal">Asal</string>
    <string name="no_hp">Nomor Hp</string>
    <string name="email">Email</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="password">Password</string>
    <string name="confpassword">Tulis Ulang Password</string>
    <string name="login">MASUK</string>
    <string name="register">DAFTAR</string>
    <string name="forgot_password">LUPA PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">Belum Punya Akun? Daftar Sekarang</string>
    <string name="have_an_account_login_now">Sudah Punya Akun? Masuk Sekarang</string>
</resources>
